<resources>
    <string name="app_name">Matrix</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Matrix</string>
    <string name="text_buttonNewCust">New Customer</string>
    <string name="text_buttonFindCust">Find Customer</string>
    <string name="text_buttonviewAll">View All</string>
    <string name="title_activity_new_customer_home"> Enter customer details </string>
    <string name="text_newCustHome_name"> Name </string>
    <string name="text_newCustHome_mobile"> Mobile Number </string>
    <string name="text_newCustHome_address"> Address </string>
    <string name="button_newCustHomeAddMeasurement">Add Measurement</string>
    <string name="title_activity_add_measurement">Enter measurement details</string>
    <string name="checkBox_addMeasurement_shirt">\t Shirt</string>
    <string name="checkBox_addMeasurement_pant">\t Trouser</string>
    <string name="editText_shirtMeasurement">Shirt details</string>
    <string name="editText_measurement">\t\t enter measurements here..</string>
    <string name="editText_pantMeasurement">Trouser details</string>
    <string name="button_addMeasurementSave">Save</string>
    <string name="title_activity_measurements">Measurements</string>
    <string name="title_activity_show_customer_details">ShowCustomerDetails</string>
    <string name="button_showCustDetails_ok"> Home</string>
    <string name="title_activity_find_customer">FindCustomer</string>
    <string name="SearchButtonContentDescription">Search</string>
    <string name="textView_searchById_hintText">\t\tcustomer number</string>
    <string name="textView_searchByName_hintText">\t\tcustomer name</string>
    <string name="textView_searchByMobile_hintText">\t\tmobile Number</string>
    <string name="textView_OR_Text">-OR-</string>
    <string name="textView_SearchBy_title"> Find customer by </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_customer_result">SearchCustomerResult</string>
    <string name="button_serchResult_Home">Home</string>
    <string name="button_serchResult_Update">Update</string>
    <string name="textView_serchResult_header">Customer details..</string>
    <string name="textView_serchResult_shirtTitle">Shirt Measurements:</string>
    <string name="textView_serchResult_pantTitle">Trouser Measurements:</string>
    <string name="btnTxt_SearchResult_Edit">Edit</string>
    <string name="btnTxt_SearchResult_Save">Save</string>
    <string name="btnTxt_SearchResult_Cancel">Cancel</string>
    <string name="btnTxt_SearchResult_Delete">Delete</string>
    <string name="btnTxt_SearchResult_Home">Home</string>
    <string name="alertDialogTxt_SearchResult_deleteMessage">Are you sure you want to delete this customer details?</string>
    <string name="alertTxt_SearchResult_customerDelete_success">Custumer successfully deleted..</string>
    <string name="alertTxt_SearchResult_customerDelete_fail">Custumer cannot be deleted..</string>
    <string name="alertTxt_SearchResult_customerUpdate_success">The measurements have been updated successfully..</string>
    <string name="alertTxt_SearchResult_customerUpdate_fail">Sorry, measurements could not be updated..</string>
    <string name="alertTxt_FindCustomer_byId_fail">Sorry, no customer by this number</string>
    <string name="alertTxt_FindCustomer_byMob_fail">Sorry, no customer by this mobile number</string>
    <string name="alertTxt_FindCustomer_byId_empty">Please enter the customer number correcly</string>
    <string name="alertTxt_FindCustomer_byMob_empty">Please enter the mobile number correcly</string>
    <string name="alertTxt_FindCustomer_byName_empty">Please enter the name correcly</string>
    <string name="title_activity_search_customer_by_name">SearchCustomerByName</string>
    <string name="alertTxt_NewCustomer_Name_mobile_empty">Name or mobile number cannot be empty</string>
    <string name="alertTxt_NewCustomer_Measuremetns_emptyMsg">Please enter the measuremetnts</string>
    <string name="mainPage_contentDesc_addCustomer">add a new customer</string>
    <string name="mainPage_contentDesc_findCustomer">find a customer</string>
    <string name="mainPage_contentDesc_viewAllCustomers">veiw all customers</string>
    <string name="headerText_SearchCustByName">Customer list with name</string>
    <string name="button_Measurement_OneByfour">&#188;</string>
    <string name="button_Measurement_half">&#189;</string>
    <string name="button_Measurement_threeByFour">&#190;</string>
    <string name="button_Measurement_SmIn">Sm In</string>
    <string name="button_Measurement_LBT">LBT</string>
    <string name="button_Measurement_SmOut">Sm Out</string>
    <string name="button_Measurement_comma">,</string>
    <string name="button_Measurement_leftbracket">(</string>
    <string name="button_Measurement_rightbracket">)</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_measurements_entry">Measurements</string>
    <string name="measurment_tab1_text">Shirt</string>
    <string name="measurement_tab2_text">Trouser</string>
    <string name="measuremnet_tab3_text">Others</string>

</resources>