<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tylor" 
    style="@style/AppTheme">

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView1"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_measurement"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" 
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/Color_Black"
                android:onClick="extraBtnclick"
                android:text="@string/button_Measurement_OneByfour"
                android:textColor="@color/Color_White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/Color_Black"
                android:onClick="extraBtnclick"
                android:text="@string/button_Measurement_half"
                android:textColor="@color/Color_White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/Color_Black"
                android:onClick="extraBtnclick"
                android:text="@string/button_Measurement_threeByFour"
                android:textColor="@color/Color_White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/Color_Black"
                android:onClick="extraBtnclick"
                android:text="@string/button_Measurement_SmIn"
                android:textColor="@color/Color_White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/Color_Black"
                android:onClick="extraBtnclick"
                android:text="@string/button_Measurement_LBT"
                android:textColor="@color/Color_White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/Color_Black"
                android:onClick="extraBtnclick"
                android:text="@string/button_Measurement_SmOut"
                android:textColor="@color/Color_White"
                android:textStyle="bold" />
        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/editText_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/HorizontalScrollView1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_margin="3dp"
        android:background="@drawable/bg_edittext_large"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textWebEditText|textMultiLine"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/Color_Black"
        android:textColorLink="@color/Color_Black"
        android:textStyle="normal" >

        <requestFocus />
    </EditText>

</RelativeLayout>